added account and home apps with functionalities

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,6 +10,9 @@
     <form method = 'POST'>
    {% csrf_token %}
    {{ forms | as_bootstrap }}
+   
+   <p>Forgot your password? Click <a href="{% url 'password_reset' %}">here</a>.</p>
+   
     <input type="submit" value="Submit"/>
 </form>
   
