--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -35,6 +35,7 @@
         </div>
             {% endif %}
         <li><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'subjects' %}">Subjects</a></li>
             
       </ul>
     
